--- a/Website/web/index.html
+++ b/Website/web/index.html
@@ -24,7 +24,7 @@
 		/>
 
 		<!-- iOS meta tags & icons -->
-		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 		<meta name="apple-mobile-web-app-title" content="Sen: Installation Page" />
 		<link rel="apple-touch-icon" href="icons/Icon-192.png" />
@@ -32,10 +32,18 @@
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" href="favicon.png" />
 
-		<title>website</title>
+		<title>Sen: Installation page</title>
 		<link rel="manifest" href="manifest.json" />
+		<link rel="stylesheet" href="styles.css" />
+		<script src="script.js" async></script>
 	</head>
 	<body>
+		<div id="splash-screen">
+			<img id="splash-logo" src="icons/Icon-192.png" alt="Loading..." />
+			<div id="loading-spinner"></div>
+			<p id="loading-text">Haruma is cooking, please wait...</p>
+		</div>
+
 		<script src="flutter_bootstrap.js" async></script>
 	</body>
 </html>
