--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
         let path = window.location.pathname;
         let search = window.location.search;
         let hash = window.location.hash;
-        window.location.replace("/index.html?redirect=" + path + search + hash);
+        window.location.replace("/Sen.Environment/index.html?redirect=" + path + search + hash);
     </script>
 </head>
 
