--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	<!--
+  <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
 
@@ -15,30 +14,39 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-	<base href="/Sen.Environment/" />
+  <base href="/Sen.Environment/">
 
-	<meta charset="UTF-8" />
-	<meta content="IE=Edge" http-equiv="X-UA-Compatible" />
-	<meta name="description"
+  <meta charset="UTF-8">
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta name="description"
 		content="Sen installation page, this is the first page that will be displayed when you install the app." />
 
-	<!-- iOS meta tags & icons -->
-	<meta name="mobile-web-app-capable" content="yes" />
-	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-	<meta name="apple-mobile-web-app-title" content="Sen: Installation Page" />
-	<link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
-	<!-- Favicon -->
-	<link rel="icon" type="image/png" href="favicon.png" />
+  <!-- iOS meta tags & icons -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Sen: Installation" />
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-	<title>Sen: Installation page</title>
-	<link rel="manifest" href="manifest.json" />
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
+
+  <title>Sen: Installation</title>
+  <link rel="manifest" href="manifest.json">
 	<link rel="stylesheet" href="styles.css" />
-	<script src="script.js" async></script>
-</head>
+	<script async>
+    window.flutterWebRendererReady = function () {
+    let splash = document.getElementById('splash-screen');
+    if (splash !== undefined) {
+      splash.style.opacity = '0';
+      setTimeout(() => (splash.style.display = 'none'), 500);
+    }
+  };
+  </script>
 
+</head>
 <body>
-	<div id="splash-screen">
+  <div id="splash-screen">
 		<div id="pumping-circle">
 			<svg>
 				<defs>
@@ -61,9 +69,10 @@
 		<p id="loading-text">Haruma is cooking, please wait <span
 				id="ellipsis"><span></span><span></span><span></span></span></p>
 	</div>
-	</div>
-	<script src="flutter_bootstrap.js" async></script>
-	<script>
+	
+
+  <script src="flutter_bootstrap.js" async></script>
+  <script>
 		let params = new URLSearchParams(window.location.search);
 		let redirectPath = params.get('redirect');
 		if (redirectPath !== null) {
@@ -71,5 +80,4 @@
 		}
 	</script>
 </body>
-
 </html>
